@@ -127,6 +127,8 @@ Fixes, minor enhancements, and performance improvements:
     * Bug fix: input file data format didn't always end up in the output.
       (1.6.3)
     * --channels bugs were fixed when dealing with "deep" images. (1.6.3)
+    * All the color space conversion operations run much faster now,
+      since the underlying IBA::colorconvert() has been parallelized. (1.6.3)
   * maketx & TextureSystem:
     * TextureSystem/IC now directly stores uint16 and half pixel data in
       the cache rather than converting internally to float for tile storage,
@@ -152,6 +154,8 @@ Fixes, minor enhancements, and performance improvements:
       image differences when the pixels that differed had NaN or NaN or
       Inf values! Now it is right. #1109 (1.6.3/1.5.13)
     * channels() bugs were fixed when dealing with "deep" images. (1.6.3)
+    * colorconvert() has been parallelized, and thus on most systems will
+      now run much faster. (1.6.3)
  * OpenEXR:
     * Improved handling of density and aspect ratio. #1042 (1.6.0)
     * Fix read_deep_tiles() error when not starting at the image origin.
